# Becoming-An-Elite-Engineer

./: .gitignore  Readme.md
CodeForces/: getTestCases.py  run.ps1  run.py  run.sh
CodeForces/110A/: 110A.cpp
CodeForces/112A/: 112A.cpp
CodeForces/116A/: 116A.cpp  116A.md
CodeForces/158A/: 158A.cpp
CodeForces/231A/: 231A.cpp  231A.md
CodeForces/236A/: 236A.cpp
CodeForces/263A/: 263A.cpp
CodeForces/266A/: 266A.cpp
CodeForces/71A/: 71A.md  (+1 more)
searchengine/: .gitignore  CMakeLists.txt  README.md  generate_inventory.py  overview.md  run.sh
searchengine/build_debug/: CMakeCache.txt  Makefile  cmake_install.cmake
searchengine/cmd/: main.cpp
searchengine/design/: lexing.md
searchengine/internal/directoryreader/: directoryreader.cpp  directoryreader.h
searchengine/internal/engine/: engine.cpp  engine.h  engine.hpp
searchengine/internal/filereader/: filereader.cpp  filereader.h
searchengine/internal/kernal/: kernal.cpp  kernal.h  kernal.hpp
searchengine/internal/kernal/core/: error.cpp  result.cpp
searchengine/internal/kernal/core/datastructures/: ringbuffer.hpp
searchengine/internal/kernal/core/headerfiles/: error.hpp  subsystem.h  token.h  token.hpp
searchengine/internal/lexer/: lexer.cpp  lexer.hpp
searchengine/internal/parser/: parser.h
searchengine/internal/store/: store.cpp  store.h
searchengine/lesson doc/: complexity-and-measurement.md  cpp-file-io.md  ebnf-notation.md  parsing-approach1.md  parsing-approach2.md  parsing.md  performance-approach1.md  performance-approach2.md  performance.md
searchengine/notes/: 01-concurrency.md
(+22 files in other folders)
